# lambda-application

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: conventional-commit.yml  publish.yml  pull-request-code.yml  pull-request-format.yml  pull-request.yml
scripts/: build.sh  conventional-commit.sh  create-release.sh  format.sh  integration-test.sh  lint.sh  local-instance.sh  publish.sh  setup.sh  test.sh  unit-test.sh  version-tag-bootstrap.sh  version-tag-id.sh
src/: main.py  main_test.py
tests/: integration_test.py
