[project]
name = "lambda-application"
description = "Lambda application code, decoupled from lambda-infrastructure"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"

dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.2",
  "requests>=2.32.4",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
# Exclude test files from linting
exclude = [
    "tests/",
    "**/test_*.py",
    "**/*_test.py",
    "**/tests.py",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_*.py",
    "*/_test.py",
    "*/tests/*",
    "*_test.py",
    "test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if self.debug:",
    "if settings.DEBUG",
    "pragma: no cover",
]

